--- a/FlatTable/src/config.cfg
+++ b/FlatTable/src/config.cfg
@@ -3,9 +3,12 @@ dbBN= imdb_MovieLens_Drama_BN
 dbSchema= imdb_MovieLens_Drama_db
 ResultDB = imdb_MovieLens_Drama_db_flat
 GenericDB= imdb_MovieLens_Drama
+
 dbusername = root
 dbpassword = joinbayes
-dbaddress = mysql://cs-oschulte-06
+dbaddress = mysql://cs-oschulte-03.cs.sfu.ca
+dbname = unielwin
+
 Outlier= 1
 ComputationMode=3
 
