--- a/FlatTable/src/config.cfg
+++ b/FlatTable/src/config.cfg
@@ -1,13 +1,10 @@
-dbOriginal= imdb_MovieLens_Drama
-dbBN= imdb_MovieLens_Drama_BN
-dbSchema= imdb_MovieLens_Drama_db
-ResultDB = imdb_MovieLens_Drama_db_flat
-GenericDB= imdb_MovieLens_Drama
-
 dbusername = root
-dbpassword = joinbayes
-dbaddress = mysql://cs-oschulte-03.cs.sfu.ca
-dbname = unielwin
+dbpassword = 123456
+dbaddress = 127.0.0.1
+
+dbname = unielwin_convert
+column = ID(student0)
+tablename = a,b_CT
 
 Outlier= 1
 ComputationMode=3
