changes for merging to master

--- a/FlatTable/src/config.cfg
+++ b/FlatTable/src/config.cfg
@@ -1,6 +1,7 @@
 dbusername = root
 dbpassword = 123456
 dbaddress = 127.0.0.1
+database = unielwin
 
 dbname = unielwin_convert
 column = ID(student0)
